# practicas_alse

./: README.md
parcial_2/: CMakeLists.txt  reporte_inventario.txt
parcial_2/include/: Producto.h
parcial_2/src/: Producto.cpp  main.cpp
practica_2/: excel.cpp  pascal.cpp  tiempo.cpp
practica_3/Biblioteca/: CMakeLists.txt
practica_3/Biblioteca/include/: Biblioteca.h  Libro.h  Usuario.h
practica_3/Biblioteca/src/: Biblioteca.cpp  Libro.cpp  Usuario.cpp  main.cpp
practica_3/Vehiculos/: CMakeLists.txt
practica_3/Vehiculos/include/: Auto.h  Bicicleta.h  SistemaAlquiler.h  Vehiculo.h
practica_3/Vehiculos/src/: Auto.cpp  Bicicleta.cpp  SistemaAlquiler.cpp  Vehiculo.cpp  main.cpp
practica_4/Carrito_compras/: CMakeLists.txt
practica_4/Carrito_compras/include/: CarritoCompras.h  ItemCarrito.h  Producto.h  Usuario.h
practica_4/Carrito_compras/src/: CarritoCompras.cpp  ItemCarrito.cpp  Producto.cpp  Usuario.cpp  main.cpp
